--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "matplot",
+  "name": "matplotjs",
   "version": "0.1.2",
   "homepage": "https://github.com/mixxen/matplot",
   "authors": [
